# entre_mc

./: .gitignore  Documentação EntreMC.docx  MANIFEST.in  README.md  frappe-app-scaffold-prompt.md  pyproject.toml
entre_mc/: hooks.py  modules.txt  tasks.py
entre_mc/entre_mc/: hooks.py  package.json  patches.txt
entre_mc/entre_mc/doctype/alocacao_de_reembolso/: alocacao_de_reembolso.json
entre_mc/entre_mc/doctype/cliente/: cliente.js  cliente.json  cliente.py
entre_mc/entre_mc/doctype/desembolso/: desembolso.json  desembolso.py
entre_mc/entre_mc/doctype/devolucao_da_garantia/: devolucao_da_garantia.js  devolucao_da_garantia.json  devolucao_da_garantia.py
entre_mc/entre_mc/doctype/documento_do_cliente/: documento_do_cliente.json
entre_mc/entre_mc/doctype/execucao_de_garantia/: execucao_de_garantia.js  execucao_de_garantia.json  execucao_de_garantia.py
entre_mc/entre_mc/doctype/garantia/: garantia.js  garantia.json
entre_mc/entre_mc/doctype/item_de_garantia/: item_de_garantia.json  item_de_garantia.py
entre_mc/entre_mc/doctype/mc_settings/: mc_settings.json
entre_mc/entre_mc/doctype/pedido_de_credito/: pedido_de_credito.js  pedido_de_credito.json  pedido_de_credito.py
entre_mc/entre_mc/doctype/plano_de_amortizacao/: plano_de_amortizacao.json
entre_mc/entre_mc/fixtures/: role.json  workflow_action_master.json
entre_mc/entre_mc/utils/: reembolso.py
entre_mc/fixtures/: print_format.json  workflow.json  workflow_state.json
entre_mc/public/css/: entre_mc.css
entre_mc/public/js/: amortizacao_view.js  garantia_view.js
entre_mc/utils/: amortizacao.py  reembolso.py
(+60 files in other folders)
