[project]
name = "entre_mc"
authors = [
    { name = "Dércio Bobo", email = "derciobob@gmail.com"}
]
description = "Entre MicroCréditos - Gestão de Microcrédito para Frappe/ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
]
ignore = [
    "B017",
    "B018",
    "B023",
    "E402",
    "E501",
    "F401",
    "F403",
    "UP015",
    "W605",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
