[project]
name = "entre_mc"
authors = [
    { name = "Dércio Bobo", email = "derciobob@gmail.com"}
]
description = "Entre MicroCréditos - Gestão de Microcrédito para Frappe/ERPNext"
requires-python = ">=3.10"
readme = "README.md"
version = "0.0.1"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["entre_mc*"]

[tool.bench.dev-dependencies]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
]
ignore = [
    "B017",
    "B018",
    "B023",
    "E402",
    "E501",
    "F401",
    "F403",
    "UP015",
    "W605",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
